kubernetes/app/mongodb-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: search_engine
    component: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search_engine
      component: mongodb
  template:
    metadata:
      name: mongodb
      labels:
        app: search_engine
        component: mongodb
    spec:
      containers:
      - image: mongo:4.2.18
        name: mongodb
