kubernetes/app/rabbitmq-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: search_engine
    component: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search_engine
      component: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        app: search_engine
        component: rabbitmq
    spec:
      containers:
      - image: bitnami/rabbitmq
        name: rabbitmq
